# imic2

./: Cargo.toml  README.md
src/: ast.rs  lib.rs  main.rs  parser.rs  proof.rs  token.rs
src/common/: ast.rs  mod.rs  parser.rs  token.rs  tokenizer.rs  unifier.rs
src/eval/: eval.rs  ml.rs  ml3.rs  ml4.rs  mod.rs  parser.rs  proof.rs  token.rs  version.rs
src/infer/: ast.rs  infer.rs  mod.rs  parser.rs  proof.rs  token.rs  unification.rs  unifier.rs
src/nameless/: eval.rs  mod.rs  parser.rs  proof.rs
src/nat/: ast.rs  mod.rs  nat.rs  parser.rs  proof.rs  token.rs  version.rs
src/poly_infer/: ast.rs  mod.rs  parser.rs  poly_infer.rs  proof.rs  token.rs  unification.rs  unifier.rs
tests/: eval_tests.rs  infer_tests.rs  nameless_eval_tests.rs  nat_tests.rs  poly_infer_test.rs
tests/snapshots/: eval_tests__ml1_25.snap  eval_tests__ml1_26.snap  eval_tests__ml1_27.snap  eval_tests__ml1_28.snap  eval_tests__ml1_29.snap  eval_tests__ml1_30.snap  eval_tests__ml1_34.snap  eval_tests__ml1_35.snap  eval_tests__ml1_36.snap  eval_tests__ml1_37.snap  eval_tests__ml1_38.snap  eval_tests__ml1_39.snap  eval_tests__ml1_40.snap  eval_tests__ml1_41.snap  eval_tests__ml1_42.snap  eval_tests__ml1_43.snap  eval_tests__ml1_44.snap  eval_tests__ml1_45.snap  eval_tests__ml1_46.snap  eval_tests__ml1_47.snap  eval_tests__ml1_48.snap  eval_tests__ml1_49.snap  eval_tests__ml1_50.snap  eval_tests__ml1_51.snap  eval_tests__ml1_52.snap  eval_tests__ml1_53.snap  eval_tests__ml1_70.snap  eval_tests__ml1_71.snap  eval_tests__ml1_72.snap  eval_tests__ml1_73.snap  eval_tests__ml1_74.snap  (+80 more)
