[package]
name = "imic2"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1"

[[bin]]
name = "ml"
path = "src/bin/eval.rs"

[[bin]]
name = "nat"
path = "src/bin/nat.rs"

[[bin]]
name = "infer"
path = "src/bin/infer.rs"

[[bin]]
name = "poly_infer"
path = "src/bin/poly_infer.rs"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }
